Implement Criteria API (#81)
- allow to filter by requester in all requests view

--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -54,10 +54,12 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a class="dropdown_button" ng-click="dropDownContracts('ec')">{{
-                            'employees_view.EC_employees' | translate }}</a>
-                        <a class="dropdown_button" ng-click="dropDownContracts('others')">{{
-                            'employees_view.others' | translate }}</a>
+                        <a class="dropdown_button" ng-click="dropDownContracts('ec')">
+                            {{'employees_view.EC_employees' | translate }}
+                        </a>
+                        <a class="dropdown_button" ng-click="dropDownContracts('others')">
+                            {{'employees_view.others' | translate }}
+                        </a>
                     </li>
                 </ul>
             </div>
