--- a/src/main/resources/public/partials/admin_requests.html
+++ b/src/main/resources/public/partials/admin_requests.html
@@ -22,6 +22,11 @@
                 <th st-sort="type">{{'table.type' | translate}} <span class="sort glyphicon"></span></th>
                 <th st-sort="status">{{'table.status' | translate}} <span class="sort glyphicon"></span></th>
             </tr>
+            <tr>
+                <th colspan="5">
+                    <input st-search class="form-control" placeholder="{{'table.search.requester' | translate}}" type="search"/>
+                </th>
+            </tr>
             </thead>
             <tbody ng-show="!isLoading">
             <tr ng-repeat="request in displayed">
