Include requested days in remaining vacation time calculations

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -18,6 +18,10 @@ body {
     width: 100%;
 }
 
+.font-weight-bold {
+    font-weight: bold;
+}
+
 .table > tbody > tr > td {
     vertical-align: middle;
     text-align: center;
