Change e-mail message - e-mail to requester after creating occasional leave request

--- a/src/main/resources/mails/occasional/request_created_requester_pl.hbs
+++ b/src/main/resources/mails/occasional/request_created_requester_pl.hbs
@@ -2,6 +2,6 @@ Urlop okolicznościowy - przypomnienie
 ----------------------------------------------
 Dzień dobry,
 
-Twój wniosek o urlop okolicznościowy został zaakceptowany. Pamiętaj o dostarczeniu potrzebnych dokumentów do administracji.
+Twój wniosek o urlop okolicznościowy został zaakceptowany. Pamiętaj o poinformowaniu działu HR.
 
 {{>footer_pl}}
