https://jira.fingo.info/browse/PRAK-38 Update Gradle to version 7.1.1 and spring boot to version 2.5.2

--- a/view.angular/public/partials/worker.html
+++ b/view.angular/public/partials/worker.html
@@ -142,7 +142,7 @@
             <div ng-repeat="vacationDay in teammates.vacation"
                  class="thumbnail"
                  style="display: inline-block; width: 200px; height: 200px; text-align: center; overflow: auto; margin: 5px">
-                <h4>{{vacationDay.date[0]}}-{{("0" + vacationDay.date[1]).slice(-2)}}-{{("0" + vacationDay.date[2]).slice(-2)}}</h4>
+                <h4>{{vacationDay.date}}</h4>
                 <hr>
                 <ul style="list-style: none">
                     <li ng-repeat="userName in vacationDay.userNames">{{userName}}</li>
