--- a/view.react/src/global-styles/index.scss
+++ b/view.react/src/global-styles/index.scss
@@ -1,1 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
+@import "src/global-styles/color-variables";
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
