--- a/view.react/src/global-styles/index.scss
+++ b/view.react/src/global-styles/index.scss
@@ -1,5 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "src/global-styles/color-variables";
+@import '~react-bootstrap-table-next/dist/react-bootstrap-table2.min.css';
+@import './bootstrap-4-compatibility.scss';
 
 html, body {
   width: 100%;
