https://jira.fingo.info/browse/PRAK-75 Create 'Make a request' view with services

--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -6,3 +6,4 @@ $GREY-COLOR: #989898;
 $DIVIDER-COLOR: #d5d5d5;
 $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
+$CALENDAR-BORDER-COLOR: #cccccc;
