https://jira.fingo.info/browse/PRAK-108 Fix consistency and styles

--- a/view.react/src/components/user-requests-list/UserRequestsList.module.scss
+++ b/view.react/src/components/user-requests-list/UserRequestsList.module.scss
@@ -1,9 +1,5 @@
-.btn {
-  background-color: inherit;
-  border: none;
-  color: red;
-}
+@import '../../global-styles/color-variables';
 
-.tableWrapper table {
-  table-layout: auto;
+.cancelBtn {
+  color: red;
 }
