--- a/view.react/src/global-styles/table-styles.module.scss
+++ b/view.react/src/global-styles/table-styles.module.scss
@@ -1,10 +1,10 @@
-.btn {
-  background-color: inherit;
-  border: none;
-}
-
 .tableWrapper table {
   table-layout: auto;
+}
+
+.actionBtn {
+  background-color: inherit;
+  border: none;
 }
 
 .actions {
