https://jira.fingo.info/browse/PRAK-20 Create dashboard presence confirmation

--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -4,6 +4,7 @@ $HOVER-COLOR: #0086bb;
 $LINK-COLOR: rgba(255, 255, 255, 0.5);
 $GREY-COLOR: #989898;
 $DIVIDER-COLOR: #d5d5d5;
+$WHITESMOKE_COLOR: #fafafa;
 $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 $CALENDAR-BORDER-COLOR: #cccccc;
