--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -1,8 +1,10 @@
 $BASE-COLOR: deepskyblue;
 $BACK-COLOR: #36c9ff;
 $HOVER-COLOR: #0086bb;
+$ACTIVE-COLOR: #005e83;
 $LINK-COLOR: rgba(255, 255, 255, 0.5);
 $GREY-COLOR: #989898;
+$LIGHTGREY-COLOR: #efefef;
 $DIVIDER-COLOR: #d5d5d5;
 $WHITESMOKE_COLOR: #fafafa;
 $PURPLE_COLOR: #c474e4;
