https://jira.fingo.info/browse/PRAK-127 Move info icon next to the occasional picker

--- a/view.react/src/components/create-absence-request-form/info-overlay/InfoOverlay.module.scss
+++ b/view.react/src/components/create-absence-request-form/info-overlay/InfoOverlay.module.scss
@@ -1,6 +1,6 @@
 @import '../../../global-styles/color-variables';
 .infoIcon {
   font-size: 2rem;
-  margin-left: 2rem;
+  margin: 1rem;
   color: $BASE-COLOR;
 }
