--- a/view.react/src/components/presence-confirmation-panel/PresenceConfirmationPanel.module.scss
+++ b/view.react/src/components/presence-confirmation-panel/PresenceConfirmationPanel.module.scss
@@ -1,16 +1,22 @@
 @import "src/global-styles/color-variables";
 @import "src/global-styles/bootstrap-breakpoints";
 
-.container {
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid $DIVIDER-COLOR;
   border-radius: 6px;
   padding: 1rem 0.5rem;
   margin: 0.5rem auto;
+  min-width: fit-content;
+  max-width: 70%;
+}
+
+.flexContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  min-width: fit-content;
-  max-width: 70%;
 }
 
 .inputWrapper {
